ollama/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          ports:
            - containerPort: 11434
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |-
                    (until ollama list > /dev/null 2>&1; do sleep 3; done && ollama pull gemma3:4b) &
          volumeMounts:
            - name: models
              mountPath: /root/.ollama
          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "5"
              memory: "7Gi"
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: ollama-models-pvc
